<resources>
    <string name="app_name">ChefMate</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="web_client_id">282583235126-fb7kpc8930vagql4ecunlbl2s0pqusjv.apps.googleusercontent.com</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_recipes_fragment">Hello Recipes fragment</string>
    <string name="recipes">Recipes</string>
    <string name="favourite">Favourite</string>
    <string name="joke">Joke</string>
    <string name="filterrecipes">FilterRecipes</string>
    <string name="please_check_your_internet_connection">Please check your Internet connection</string>
    <string name="no_internet">No Internet</string>
    <string name="recipeimagedesc">recipeImageDesc</string>
    <string name="fav_icon">fav_icon</string>
    <string name="veganimage">veganImage</string>
    <string name="clockimage">clockImage</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="vegan">Vegan</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="bread">Bread</string>
    <string name="marinade">Marinade</string>
    <string name="breakfast">Breakfast</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="soup">Soup</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="apply">Apply</string>
    <string name="search_recipe">Search Recipe</string>
    <string name="search_by_name">Search by name</string>
    <string name="gradient_recipe_image">Gradient Recipe Image</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="ingredient_image">Ingredient Image</string>
</resources>