<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".features.presentation.login.LoginFragment">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginTextField"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/neutral_100"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText" />

    <EditText
        android:id="@+id/loginPasswordField"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/neutral_100"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/loginTextField"
        app:layout_constraintStart_toStartOf="@+id/loginTextField"
        app:layout_constraintTop_toBottomOf="@+id/loginTextField" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/loginPasswordField"
        app:layout_constraintStart_toStartOf="@+id/loginPasswordField"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordField" />

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:outlineProvider="none"
        android:padding="0dp"
        android:text="@string/forgot_password"
        android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
        android:textColor="@color/error"
        android:textSize="11sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />


    <Button
        android:id="@+id/loginWithGoogleBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/neutral_200"
        android:drawableStart="@drawable/ic_circle"
        android:text="@string/continue_with_google"
        android:textColor="@color/neutral_800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordButton" />

</androidx.constraintlayout.widget.ConstraintLayout>